# StrukturnoProgramiranje

./: CMakeLists.txt  main.cpp
Kol2Dopolnitelni/: Zadaca1.3.cpp  Zadaca11.3.c  Zadaca6.3.cpp  Zadaca7.3.cpp  Zadaca8.3.c
Kol2Zadaci/: Zadaca12.2.c  Zadaca13.2.cpp  Zadaca14.2.c  Zadaca16.2.c  Zadaca17.2.cpp  Zadaca3.2.c  Zadaca4.2.cpp  Zadaca5.2.c  Zadaca6.2.cpp  Zadaca7.2.c  Zadaca9.2.cpp
KolZadaci/: Zadaca1.c  Zadaca10.cpp  Zadaca11.c  Zadaca11.cpp  Zadaca12.c  Zadaca12.cpp  Zadaca13.c  Zadaca13.cpp  Zadaca14.c  Zadaca15.cpp  Zadaca2.c  Zadaca3.c  Zadaca4.c  Zadaca5.c  Zadaca6.c  Zadaca7.c  Zadaca8.c  Zadaca9.c
LabsKol1/: Labs1.c  Labs10.c  Labs11.c  Labs12.c  Labs13.cpp  Labs14.c  Labs15.cpp  Labs16.c  Labs17.cpp  Labs18.c  Labs18.cpp  Labs19.c  Labs2.c  Labs20.cpp  Labs21.cpp  Labs22.cpp  Labs23.cpp  Labs24.cpp  Labs25.c  Labs26.c  Labs27.cpp  Labs28.cpp  Labs29.cpp  Labs3.c  Labs30.c  Labs31.cpp  Labs32.c  Labs33.c  Labs34.cpp  Labs35.c  Labs36.c  Labs36.cpp  Labs4.c  Labs5.cpp  Labs6.c  Labs7.cpp  Labs8.c  Labs8.cpp  Labs9.c
LabsKol2/: Labs1.2.cpp  Labs10.2.c  Labs11.2.c  Labs12.2.c  Labs13.2.c  Labs14.2.c  Labs15.2.c  Labs16.2.c  Labs17.2.c  Labs18.2.c  Labs19.2.c  Labs2.2.c  Labs20.2.c  Labs21.2.c  Labs22.2.c  Labs23.2.c  Labs24.2.c  Labs25.2.c  Labs26.2.c  Labs27.2.c  Labs28.2.c  Labs29.2.cpp  Labs3.2.c  Labs31.2.c  Labs32.2.c  Labs33.2.c  Labs4.2.c  Labs4.2.cpp  Labs5.2.c  Labs6.2.c  Labs7.2.c  Labs8.2.c  Labs9.2.c
