cmake_minimum_required(VERSION 3.24)
project(StrukturnoProgramiranje)

set(CMAKE_CXX_STANDARD 17)

add_executable(main main.cpp)
add_executable(Zadaca1 KolZadaci/Zadaca1.c)
add_executable(Zadaca2 KolZadaci/Zadaca2.c)
add_executable(Zadaca3 KolZadaci/Zadaca3.c)
add_executable(Zadaca4 KolZadaci/Zadaca4.c)
add_executable(Zadaca5 KolZadaci/Zadaca5.c)
add_executable(Zadaca6 KolZadaci/Zadaca6.c)
add_executable(Zadaca7 KolZadaci/Zadaca7.c)
add_executable(Zadaca8 KolZadaci/Zadaca8.c)
add_executable(Zadaca9 KolZadaci/Zadaca9.cpp)
add_executable(Zadaca10 KolZadaci/Zadaca10.cpp)
add_executable(Zadaca11 KolZadaci/Zadaca11.cpp)
add_executable(Zadaca13 KolZadaci/Zadaca13.cpp)
add_executable(Zadaca14 KolZadaci/Zadaca14.cpp)
add_executable(Zadaca15 KolZadaci/Zadaca15.cpp)
add_executable(Labs1 LabsKol1/Labs1.cpp)
add_executable(Labs2 LabsKol1/Labs2.cpp)
add_executable(Labs3 LabsKol1/Labs3.cpp)
add_executable(Labs4 LabsKol1/Labs4.cpp)
add_executable(Labs5 LabsKol1/Labs5.cpp)
add_executable(Labs6 LabsKol1/Labs6.cpp)
add_executable(Labs7 LabsKol1/Labs7.cpp)
add_executable(Labs8 LabsKol1/Labs8.cpp)
add_executable(Labs9 LabsKol1/Labs9.cpp)
add_executable(Labs11 LabsKol1/Labs11.cpp)
add_executable(Labs12 LabsKol1/Labs12.cpp)
add_executable(Labs13 LabsKol1/Labs13.cpp)
add_executable(Labs14 LabsKol1/Labs14.cpp)
add_executable(Labs15 LabsKol1/Labs15.cpp)
add_executable(Labs16 LabsKol1/Labs16.cpp)
add_executable(Labs17 LabsKol1/Labs17.cpp)
add_executable(Labs18 LabsKol1/Labs18.cpp)
add_executable(Labs19 LabsKol1/Labs19.cpp)
add_executable(Labs20 LabsKol1/Labs20.cpp)
add_executable(Labs21 LabsKol1/Labs21.cpp)
add_executable(Labs22 LabsKol1/Labs22.cpp)
add_executable(Labs23 LabsKol1/Labs23.cpp)
add_executable(Labs24 LabsKol1/Labs24.cpp)
add_executable(Labs34 LabsKol1/Labs34.cpp)
add_executable(Labs36 LabsKol1/Labs36.cpp)
add_executable(Zadaca3.2 Kol2Zadaci/Zadaca3.2.cpp)
add_executable(Zadaca4.2 Kol2Zadaci/Zadaca4.2.cpp)
add_executable(Zadaca5.2 Kol2Zadaci/Zadaca5.2.cpp)
add_executable(Zadaca6.2 Kol2Zadaci/Zadaca6.2.cpp)
add_executable(Zadaca7.2 Kol2Zadaci/Zadaca7.2.cpp)
add_executable(Zadaca9.2 Kol2Zadaci/Zadaca9.2.cpp)
add_executable(Zadaca12.2 Kol2Zadaci/Zadaca12.2.cpp)
add_executable(Zadaca13.2 Kol2Zadaci/Zadaca13.2.cpp)
add_executable(Zadaca14.2 Kol2Zadaci/Zadaca14.2.cpp)
add_executable(Zadaca16.2 Kol2Zadaci/Zadaca16.2.cpp)
add_executable(Zadaca17.2 Kol2Zadaci/Zadaca17.2.cpp)
add_executable(Labs1.2 LabsKol2/Labs1.2.cpp)
add_executable(Labs2.2 LabsKol2/Labs2.2.cpp)
add_executable(Labs3.2 LabsKol2/Labs3.2.cpp)
add_executable(Labs4.2 LabsKol2/Labs4.2.cpp)
add_executable(Labs29.2 LabsKol2/Labs29.2.cpp)
add_executable(Zadaca1.3 Kol2Dopolnitelni/Zadaca1.3.cpp)
add_executable(Zadaca6.3 Kol2Dopolnitelni/Zadaca6.3.cpp)
add_executable(Zadaca7.3 Kol2Dopolnitelni/Zadaca7.3.cpp)
add_executable(Zadaca8.3 Kol2Dopolnitelni/Zadaca8.3.cpp)
add_executable(Zadaca11.3 Kol2Dopolnitelni/Zadaca11.3.cpp)
