cmake_minimum_required(VERSION 3.24)
project(StrukturnoProgramiranje)

set(CMAKE_CXX_STANDARD 17)

add_executable(main main.cpp)
add_executable(Zadaca1 KolZadaci/Zadaca1.c)
add_executable(Zadaca2 KolZadaci/Zadaca2.c)
add_executable(Zadaca3 KolZadaci/Zadaca3.c)
add_executable(Zadaca4 KolZadaci/Zadaca4.c)
add_executable(Zadaca5 KolZadaci/Zadaca5.c)
add_executable(Zadaca6 KolZadaci/Zadaca6.c)
add_executable(Zadaca7 KolZadaci/Zadaca7.c)
add_executable(Zadaca8 KolZadaci/Zadaca8.c)
add_executable(Zadaca9 KolZadaci/Zadaca9.c)
add_executable(Zadaca10 KolZadaci/Zadaca10.c)
add_executable(Zadaca11 KolZadaci/Zadaca11.c)
add_executable(Zadaca12 KolZadaci/Zadaca12.c)
add_executable(Zadaca13 KolZadaci/Zadaca13.c)
add_executable(Zadaca14 KolZadaci/Zadaca14.c)
add_executable(Zadaca15 KolZadaci/Zadaca15.c)
add_executable(Labs1 LabsKol1/Labs1.c)
add_executable(Labs2 LabsKol1/Labs2.c)
add_executable(Labs3 LabsKol1/Labs3.c)
add_executable(Labs4 LabsKol1/Labs4.c)
add_executable(Labs5 LabsKol1/Labs5.c)
add_executable(Labs6 LabsKol1/Labs6.c)
add_executable(Labs7 LabsKol1/Labs7.c)
add_executable(Labs8 LabsKol1/Labs8.c)
add_executable(Labs9 LabsKol1/Labs9.c)
add_executable(Labs10 LabsKol1/Labs10.c)
add_executable(Labs11 LabsKol1/Labs11.c)
add_executable(Labs12 LabsKol1/Labs12.c)
add_executable(Labs13 LabsKol1/Labs13.c)
add_executable(Labs14 LabsKol1/Labs14.c)
add_executable(Labs15 LabsKol1/Labs15.c)
add_executable(Labs16 LabsKol1/Labs16.c)
add_executable(Labs17 LabsKol1/Labs17.c)
add_executable(Labs18 LabsKol1/Labs18.c)
add_executable(Labs19 LabsKol1/Labs19.c)
add_executable(Labs20 LabsKol1/Labs20.c)
add_executable(Labs21 LabsKol1/Labs21.c)
add_executable(Labs22 LabsKol1/Labs22.c)
add_executable(Labs23 LabsKol1/Labs23.c)
add_executable(Labs24 LabsKol1/Labs24.c)
add_executable(Labs25 LabsKol1/Labs25.c)
add_executable(Labs26 LabsKol1/Labs26.c)
add_executable(Labs27 LabsKol1/Labs27.c)
add_executable(Labs28 LabsKol1/Labs28.c)
add_executable(Labs29 LabsKol1/Labs29.c)
add_executable(Labs30 LabsKol1/Labs30.c)
add_executable(Labs31 LabsKol1/Labs31.c)
add_executable(Labs32 LabsKol1/Labs32.c)
add_executable(Labs33 LabsKol1/Labs33.c)
add_executable(Labs34 LabsKol1/Labs34.c)
add_executable(Labs35 LabsKol1/Labs35.c)
add_executable(Labs36 LabsKol1/Labs36.c)
add_executable(Zadaca3.2 Kol2Zadaci/Zadaca3.2.c)
add_executable(Zadaca4.2 Kol2Zadaci/Zadaca4.2.c)
add_executable(Zadaca5.2 Kol2Zadaci/Zadaca5.2.c)
add_executable(Zadaca6.2 Kol2Zadaci/Zadaca6.2.c)
add_executable(Zadaca7.2 Kol2Zadaci/Zadaca7.2.c)
add_executable(Zadaca9.2 Kol2Zadaci/Zadaca9.2.c)
add_executable(Zadaca12.2 Kol2Zadaci/Zadaca12.2.c)
add_executable(Zadaca13.2 Kol2Zadaci/Zadaca13.2.c)
add_executable(Zadaca14.2 Kol2Zadaci/Zadaca14.2.c)
add_executable(Zadaca16.2 Kol2Zadaci/Zadaca16.2.c)
add_executable(Zadaca17.2 Kol2Zadaci/Zadaca17.2.c)
add_executable(Labs1.2 LabsKol2/Labs1.2.c)
add_executable(Labs2.2 LabsKol2/Labs2.2.c)
add_executable(Labs3.2 LabsKol2/Labs3.2.c)
add_executable(Labs4.2 LabsKol2/Labs4.2.c)
add_executable(Labs5.2 LabsKol2/Labs5.2.c)
add_executable(Labs6.2 LabsKol2/Labs6.2.c)
add_executable(Labs7.2 LabsKol2/Labs7.2.c)
add_executable(Labs8.2 LabsKol2/Labs8.2.c)
add_executable(Labs9.2 LabsKol2/Labs9.2.c)

add_executable(Labs29.2 LabsKol2/Labs29.2.c)
add_executable(Zadaca1.3 Kol2Dopolnitelni/Zadaca1.3.c)
add_executable(Zadaca6.3 Kol2Dopolnitelni/Zadaca6.3.c)
add_executable(Zadaca7.3 Kol2Dopolnitelni/Zadaca7.3.c)
add_executable(Zadaca8.3 Kol2Dopolnitelni/Zadaca8.3.c)
add_executable(Zadaca11.3 Kol2Dopolnitelni/Zadaca11.3.c)

add_executable(LabsKol2_Labs10.2 LabsKol2/Labs10.2.c)
add_executable(LabsKol2_Labs11.2 LabsKol2/Labs11.2.c)
add_executable(LabsKol2_Labs12.2 LabsKol2/Labs12.2.c)
add_executable(LabsKol2_Labs13.2 LabsKol2/Labs13.2.c)
add_executable(LabsKol2_Labs14.2 LabsKol2/Labs14.2.c)
add_executable(LabsKol2_Labs15.2 LabsKol2/Labs15.2.c)
add_executable(LabsKol2_Labs16.2 LabsKol2/Labs16.2.c)
add_executable(LabsKol2_Labs17.2 LabsKol2/Labs17.2.c)
add_executable(LabsKol2_Labs18.2 LabsKol2/Labs18.2.c)
add_executable(LabsKol2_Labs19.2 LabsKol2/Labs19.2.c)
add_executable(LabsKol2_Labs20.2 LabsKol2/Labs20.2.c)